<resources>
    <string name="app_name">ManageWallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listofentries_fragment">List Of Entries fragment</string>

    <string name="month_wise_fragment">Month Wise fragment</string>
    <string name="title_activity_add_expenditure">AddExpenditureActivity</string>
    <string name="title_activity_add_category">AddCategoryActivity</string>
    <string name="action_add">Add</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="action_add_currency">Add Currency</string>
    <string name="action_add_categories">Add Category</string>
    <string name="title_activity_currency">CurrencyActivity</string>
    <string name="action_add_expindituretype">Add Expenditure Type</string>
    <string name="title_activity_add_expenditure_type">AddExpenditureTypeActivity</string>
</resources>
