<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        android:icon="@drawable/ic_menu_send"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_currency"
        android:orderInCategory="100"
        android:title="@string/action_add_currency"
        android:icon="@drawable/ic_menu_manage"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_categories"
        android:orderInCategory="100"
        android:title="@string/action_add_categories"
        android:icon="@drawable/ic_menu_camera"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_add_expindituretype"
        android:orderInCategory="100"
        android:title="@string/title_activity_add_expenditure"
        android:icon="@drawable/ic_menu_camera"
        app:showAsAction="ifRoom"/>
</menu>
